update cargo files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [workspace]
 members = [
+    "berty",
     "smt2parser",
-    "smt2proxy",
     "z3tracer",
-    "smt2patch",
 ]
 
 [profile.release]
