--- a/z3tracer/Cargo.toml
+++ b/z3tracer/Cargo.toml
@@ -21,12 +21,9 @@ smt2parser = { path = "../smt2parser", version = "0.6.1" }
 thiserror = "1.0.24"
 once_cell = "1.7.2"
 
-plotters = { version = "0.3.0", optional = true }
-petgraph = { version = "0.5.1", optional = true }
-multiset = { version = "0.0.5", optional = true }
-
-[features]
-report = ["plotters", "petgraph", "multiset"]
+plotters = { version = "0.3.0" }
+petgraph = { version = "0.5.1" }
+multiset = { version = "0.0.5" }
 
 [dev-dependencies]
 anyhow = "1.0.40"
